--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crtttttttossorigin
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg" href="/src/assets/logo-white.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
